syntax = "proto3";
package evm;

import "google/api/annotations.proto";
import "evm/enums.proto";

option go_package = "github.com/KiiChain/kiichainV3/x/evm/types";

// Query defines the gRPC querier service.
service Query {
    rpc KiiAddressByEVMAddress(QueryKiiAddressByEVMAddressRequest) returns (QueryKiiAddressByEVMAddressResponse) {
        option (google.api.http).get = "/kiichain-protocol/kiichain/evm/kii_address";
    }

    rpc EVMAddressByKiiAddress(QueryEVMAddressByKiiAddressRequest) returns (QueryEVMAddressByKiiAddressResponse) {
        option (google.api.http).get = "/kiichain-protocol/kiichain/evm/evm_address";
    }

    rpc StaticCall(QueryStaticCallRequest) returns (QueryStaticCallResponse) {
        option (google.api.http).get = "/kiichain-protocol/kiichain/evm/static_call";
    }

    rpc Pointer(QueryPointerRequest) returns (QueryPointerResponse) {
        option (google.api.http).get = "/kiichain-protocol/kiichain/evm/pointer";
    }

    rpc PointerVersion(QueryPointerVersionRequest) returns (QueryPointerVersionResponse) {
        option (google.api.http).get = "/kiichain-protocol/kiichain/evm/pointer_version";
    }
}

message QueryKiiAddressByEVMAddressRequest {
    string evm_address = 1;
}

message QueryKiiAddressByEVMAddressResponse {
    string kii_address = 1;
    bool associated = 2;
}

message QueryEVMAddressByKiiAddressRequest {
    string kii_address = 1;
}

message QueryEVMAddressByKiiAddressResponse {
    string evm_address = 1;
    bool associated = 2;
}

message QueryStaticCallRequest {
    bytes data = 1;
    string to = 2;
}

message QueryStaticCallResponse {
    bytes data = 1;
}

message QueryPointerRequest {
    PointerType pointer_type = 1;
    string pointee = 2;
}

message QueryPointerResponse {
    string pointer = 1;
    uint32 version = 2;
    bool exists = 3;
}

message QueryPointerVersionRequest {
    PointerType pointer_type = 1;
}

message QueryPointerVersionResponse {
    uint32 version = 1;
    uint64 cw_code_id = 2;
}
